k8s/frontend-user-app/strip-prefix-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: user-strip-prefix
  namespace: user-app
spec:
  stripPrefix:
    prefixes:
      - /user
