k8s/frontend-user-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
  namespace: user-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      tolerations:
        - key: nodetype
          operator: Equal
          value: user
          effect: NoSchedule
      nodeSelector:
        role: user-worker
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: user-app
                topologyKey: kubernetes.io/hostname
      containers:
        - name: user-app
          image: kimsewon/user-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
