k8s/frontend-user-app/user-ingress.yml
# Ingress 매니페스트

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-web-ingress
  namespace: user-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: user-app-coraza-waf@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-app
                port:
                  number: 80
